1-JavaScript/Week4/test-reports/ex1-doubleEvenNumbers.test.fail.txt
*** Unit Test Error Report ***

Command failed: npx jest ex1-doubleEvenNumbers.test.js --colors
 FAIL  1-JavaScript/Week4/homework/ex1-doubleEvenNumbers.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    SyntaxError: C:\Users\222aa\Homework-class37\1-JavaScript\Week4\homework\ex1-doubleEvenNumbers.test.js: Unexpected token (16:63)

      14 |   // TODO rewrite the function body using `map` and `filter`.
      15 |
    > 16 |   const newNumbers = numbersArr.filter(arrNum => arrNum % 2 ==== 0).map(arrNum => arrNum*2)
         |                                                                ^
      17 |   return newNumbers;
      18 |   
      19 |   const newNumbers = [];

      at Parser._raise (node_modules/@babel/parser/src/parser/error.js:147:45)
      at Parser.raiseWithData (node_modules/@babel/parser/src/parser/error.js:142:17)
      at Parser.raise (node_modules/@babel/parser/src/parser/error.js:91:17)
      at Parser.unexpected (node_modules/@babel/parser/src/parser/util.js:190:16)
      at Parser.parseExprAtom (node_modules/@babel/parser/src/parser/expression.js:1323:22)
      at Parser.parseExprSubscripts (node_modules/@babel/parser/src/parser/expression.js:668:23)
      at Parser.parseUpdate (node_modules/@babel/parser/src/parser/expression.js:648:21)
      at Parser.parseMaybeUnary (node_modules/@babel/parser/src/parser/expression.js:619:23)
      at Parser.parseMaybeUnaryOrPrivate (node_modules/@babel/parser/src/parser/expression.js:372:14)
      at Parser.parseExprOpBaseRightExpr (node_modules/@babel/parser/src/parser/expression.js:534:12)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        8.418 s
Ran all test suites matching /ex1-doubleEvenNumbers.test.js/i.
*** ESLint Report ***

ex1-doubleEvenNumbers.test.js
  16:64  error  Parsing error: Unexpected token =

✖ 1 problem (1 error, 0 warnings)

